--- a/DoIt/View/Base.lproj/Main.storyboard
+++ b/DoIt/View/Base.lproj/Main.storyboard
@@ -31,13 +31,16 @@
                                     </connections>
                                 </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListViewCellIdentifier" id="xZB-0L-MsI" customClass="ListTableViewCell" customModule="DoIt" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="ListViewCellIdentifier" id="xZB-0L-MsI" customClass="ListTableViewCell" customModule="DoIt" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="72" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xZB-0L-MsI" id="YQO-bO-S9O">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="308" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="AMf-rA-Bh6" kind="presentation" identifier="editItem" trigger="accessoryAction" id="1hZ-BS-ddl"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -58,7 +61,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="8aI-6t-gFo">
                             <connections>
                                 <action selector="addAction:" destination="BYZ-38-t0r" id="Gve-Sx-bCK"/>
-                                <segue destination="AMf-rA-Bh6" kind="presentation" identifier="AddItem" id="83a-Uf-TSf"/>
+                                <segue destination="AMf-rA-Bh6" kind="presentation" identifier="addItem" id="83a-Uf-TSf"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -217,4 +220,7 @@
             <point key="canvasLocation" x="-324" y="118"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="1hZ-BS-ddl"/>
+    </inferredMetricsTieBreakers>
 </document>
